Add function to auto caps first letter of names