@@ -2,14 +2,13 @@ package seedu.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalPersons.ALICE;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -21,6 +20,7 @@ import seedu.address.model.AddressBook;
 import seedu.address.model.Model;
 import seedu.address.model.ReadOnlyAddressBook;
 import seedu.address.model.ReadOnlyUserPrefs;
+import seedu.address.model.person.Name;
 import seedu.address.model.person.Person;
 import seedu.address.testutil.PersonBuilder;
 
@@ -40,7 +40,7 @@ public class AddCommandTest {
 
         assertEquals(String.format(AddCommand.MESSAGE_SUCCESS, validPerson.getName()),
                 commandResult.getFeedbackToUser());
-        assertEquals(Arrays.asList(validPerson), modelStub.personsAdded);
+        assertEquals(List.of(validPerson), modelStub.personsAdded);
     }
 
     @Test
@@ -60,20 +60,20 @@ public class AddCommandTest {
         AddCommand addBobCommand = new AddCommand(bob);
 
         // same object -> returns true
-        assertTrue(addAliceCommand.equals(addAliceCommand));
+        assertEquals(addAliceCommand, addAliceCommand);
 
         // same values -> returns true
         AddCommand addAliceCommandCopy = new AddCommand(alice);
-        assertTrue(addAliceCommand.equals(addAliceCommandCopy));
+        assertEquals(addAliceCommand, addAliceCommandCopy);
 
         // different types -> returns false
-        assertFalse(addAliceCommand.equals(1));
+        assertNotEquals(1, addAliceCommand);
 
         // null -> returns false
-        assertFalse(addAliceCommand.equals(null));
+        assertNotEquals(null, addAliceCommand);
 
         // different person -> returns false
-        assertFalse(addAliceCommand.equals(addBobCommand));
+        assertNotEquals(addAliceCommand, addBobCommand);
     }
 
     @Test
@@ -200,4 +200,52 @@ public class AddCommandTest {
         }
     }
 
+    /**
+     * Helper to call the private capitalizeName in AddCommand via an instance.
+     */
+    private Name capitalize(String name) {
+        String capitalized = AddCommand.capitalizeName(name);
+        return new Name(capitalized);
+    }
+
+    // EP: Normal lowercase input
+    @Test
+    public void capitalize_normalLowerCase() {
+        Name input = new Name("john doe");
+        Name expected = new Name("John Doe");
+        assertEquals(expected, capitalize(input.fullName));
+    }
+
+    // EP: Mixed case input
+    @Test
+    public void capitalize_mixedCase() {
+        Name input = new Name("jOhN dOE");
+        Name expected = new Name("John Doe");
+        assertEquals(expected, capitalize(input.fullName));
+    }
+
+    // EP: Already properly capitalized input
+    @Test
+    public void capitalize_alreadyCapitalized() {
+        Name input = new Name("Alice Smith");
+        Name expected = new Name("Alice Smith");
+        assertEquals(expected, capitalize(input.fullName));
+    }
+
+    // EP: Single-letter words input
+    @Test
+    public void capitalize_singleLetterWords() {
+        Name input = new Name("a b c");
+        Name expected = new Name("A B C");
+        assertEquals(expected, capitalize(input.fullName));
+    }
+
+    // EP: Single-word input
+    @Test
+    public void capitalize_singleWord() {
+        Name input = new Name("bob");
+        Name expected = new Name("Bob");
+        assertEquals(expected, capitalize(input.fullName));
+    }
 }
+
